Expand route and zone support